--- a/app/views/scripts/mission/index.phtml
+++ b/app/views/scripts/mission/index.phtml
@@ -89,9 +89,10 @@ if (!is_array($missionArray)) {
       <?php
       if (isset($_SESSION['missionArray'])) {
         foreach ($missionArray as $mission) {
+          $id = $mission['id'];
           $title = ucfirst($mission['title']);
-          $character = ucfirst($mission['character']);
-          $iCharacter = substr(($character), 0, 1); //muestra la primera inicial
+          $champ = ucfirst($mission['champ']);
+          $ichamp = substr(($champ), 0, 1); //muestra la primera inicial
           $tag = $mission['tag'];
 
           switch ($tag) {
@@ -145,16 +146,16 @@ if (!is_array($missionArray)) {
       ?>
           <form method="POST">
             <div class="flex gap-7 px-5 py-3 items-center rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-00 <?php echo $bgcolor ?>">
-              <!-- Character -->
-              <div class="flex-3 text-2xl font-semibold transition duration-100 ease-in-out" data-bs-toggle="tooltip" data-bs-html="true" title="<?php echo $character ?>"><?php echo $iCharacter ?></a></div>
+              <!-- champ -->
+              <div class="flex-3 text-2xl font-semibold transition duration-100 ease-in-out" data-bs-toggle="tooltip" data-bs-html="true" title="<?php echo $champ ?>"><?php echo $ichamp ?></a></div>
               <!-- Tag -->
               <div class="flex-3 h-5 w-5 bg-<?php echo $color ?>-500 rounded-full transition duration-100 ease-in-out" data-bs-toggle="tooltip" title="<?php echo $text ?>"></div>
-              <!-- Character -->
+              <!-- champ -->
               <div class="flex-1 font-medium text-center "><?php echo $title ?></div>
               <!-- Operaciones -->
               <div class="flex-none font-medium flex gap-2.5 text-lime-600">
                 <!-- Input-hidden para recoger el value de mission -->
-                <input type="hidden" name="missionName" value="<?php echo $title ?>">
+                <input type="hidden" name="missionId" value="<?php echo $id ?>">
                 <button id="starred" name="starred" type="submit"><i class="fa-<?php echo $star . ' ' . $colorStar ?> fa-star hover:text-white"></i></button>
                 <button id="edit" name="edit" type="submit"><i class="fa-regular fa-pen-to-square hover:text-white"></i></button>
                 <button id="complete" name="complete" type="submit"><i class="fa-solid fa-check <?php echo $check ?> hover:text-white"></i></button>
@@ -183,7 +184,7 @@ if (!is_array($missionArray)) {
 
 </div>
 
-<!-- Script de tooltip para mostrar character y tag completo -->
+<!-- Script de tooltip para mostrar champ y tag completo -->
 <!-- Required popper.js -->
 <script src="https://unpkg.com/@popperjs/core@2.9.1/dist/umd/popper.min.js" charset="utf-8"></script>
 <script type="text/javascript">
