--- a/app/views/scripts/mission/newmission.phtml
+++ b/app/views/scripts/mission/newmission.phtml
@@ -12,8 +12,8 @@
           <input id="title" name="title" type="text" class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white/30" placeholder="Come up with a task name...">
         </div>
         <div class="space-y-2">
-          <label for="character" class="ml-5 font-medium ">Assigned to</label>
-          <input id="character" name="character" type="text" autocomplete="username" autofill class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white/30" placeholder="Assign to a character">
+          <label for="champ" class="ml-5 font-medium ">Assigned to</label>
+          <input id="champ" name="champ" type="text" autocomplete="username" autofill class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white/30" placeholder="Assign to a champ">
         </div>
         <div class="space-y-2">
           <label for="tag" class="ml-5 font-medium">Tag</label>
