--- a/app/views/scripts/user/signin.phtml
+++ b/app/views/scripts/user/signin.phtml
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="flex pt-10 place-content-center">
-      <input type="submit" name="signin" value="I'm ready!" class="group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+      <button type="submit" name="signin" class="group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">I'm ready!</button>
       </div>
     </form>
   </div>
