--- a/app/views/scripts/mission/newmission.phtml
+++ b/app/views/scripts/mission/newmission.phtml
@@ -1,5 +1,5 @@
 <!-- Estructura de formulario para añadir una misión-->
-<div class="min-h-full p-20 flex justify-center text-white">
+<div class="min-h-full p-10 md:p-20 flex justify-center text-white">
   <div class="max-w-lg w-full space-y-10 flex-col justify-center">
     <div class="space-y-5">
       <img class="mx-auto h-12" src="http://wavesforweirdos.com/wp-content/uploads/2022/01/wf-logo-white-1.png" alt="weirdofamily">
